...
        android:layout_height="60dp"
        android:layout_marginTop="230dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/comic_neue_bold"
        android:hint="Enter Your Email Here"
        android:id="@+id/signInEmailText"
        android:background="@android:drawable/editbox_background_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/passwordInputLayout"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/signInEmailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/signInPasswordText"
            android:fontFamily="@font/comic_neue_bold"
            android:hint="Enter Password Here"
            />

    </com.google.android.material.textfield.TextInputLayout>

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/comic_neue_bold"
        android:onClick="signIn"
        android:text="Sign In"
        android:id="@+id/signIn_Btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
...
