...
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/comic_neue_bold"
        android:singleLine="false"
        android:text="Sign In"
        android:id="@+id/signInBtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:layout_constraintTop_toTopOf="@id/createAcctBtn"
...
